...

                        <!-- A열 -->
                        <TableRow>

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="A1" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="A2" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="A3" />

                            <TextView
...
                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="C1" />

                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="C2" />

                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="C3" />

                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="C4" />
                        </TableRow>

                        <!-- D열 -->
                        <TableRow>

                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="D1" />

                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="D2" />

                            <TextView
...

                        <!-- E열 -->
                        <TableRow>

                            <TextView
                                style="@style/SeatTextStyleA"
                                android:text="E1" />

                            <TextView
                                style="@style/SeatTextStyleA"
                                android:text="E2" />

                            <TextView
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/seat_movie_title"
                    style="@style/MovieItemTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{booking_status.movie.title}"
                    tools:text="해리 포터와 마법사의 돌" />

                <TextView
                    android:id="@+id/seat_movie_price"
                    style="@style/MoviePriceTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/booking_seat_price(booking_status.calculateTicketPrices())}"
                    tools:text="0원" />
            </LinearLayout>

            <!-- 확인 버튼 -->
            <Button
                android:id="@+id/seat_confirm_button"
                style="@style/ButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/gray_500"
                android:text="@string/booking_seat_okay"
                tools:text="확인" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

