...
                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="16sp"
                    tools:text="12000원" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_booking"
                android:layout_width="80dp"
                android:layout_height="match_parent"
...
