<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="woowacourse.movie.ui.selection.MovieSeatSelectionContract.Presenter" />

        <variable
            name="movieTitle"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.selection.MovieSeatSelectionActivity">

        <ScrollView
            android:id="@+id/sv_information_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp"
                    android:layout_marginBottom="56dp"
                    android:background="@color/screen_text_background"
                    android:gravity="center_horizontal"
                    android:text="@string/screen_text"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/tl_seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="96dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/tv_screen">

                    <TableRow>

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(0, 0)}"
                            app:column="@{0}"
                            app:row="@{0}" />

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(0, 1)}"
                            app:column="@{1}"
                            app:row="@{0}" />

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(0, 2)}"
                            app:column="@{2}"
                            app:row="@{0}" />

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(0, 3)}"
                            app:column="@{3}"
                            app:row="@{0}" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(1, 0)}"
                            app:column="@{0}"
                            app:row="@{1}" />

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(1, 1)}"
                            app:column="@{1}"
                            app:row="@{1}" />

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(1, 2)}"
                            app:column="@{2}"
                            app:row="@{1}" />

                        <TextView
                            style="@style/B_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(1, 3)}"
                            app:column="@{3}"
                            app:row="@{1}" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(2, 0)}"
                            app:column="@{0}"
                            app:row="@{2}" />

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(2, 1)}"
                            app:column="@{1}"
                            app:row="@{2}" />

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(2, 2)}"
                            app:column="@{2}"
                            app:row="@{2}" />

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(2, 3)}"
                            app:column="@{3}"
                            app:row="@{2}" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(3, 0)}"
                            app:column="@{0}"
                            app:row="@{3}" />

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(3, 1)}"
                            app:column="@{1}"
                            app:row="@{3}" />

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(3, 2)}"
                            app:column="@{2}"
                            app:row="@{3}" />

                        <TextView
                            style="@style/S_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(3, 3)}"
                            app:column="@{3}"
                            app:row="@{3}" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/A_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(4, 0)}"
                            app:column="@{0}"
                            app:row="@{4}" />

                        <TextView
                            style="@style/A_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(4, 1)}"
                            app:column="@{1}"
                            app:row="@{4}" />

                        <TextView
                            style="@style/A_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(4, 2)}"
                            app:column="@{2}"
                            app:row="@{4}" />

                        <TextView
                            style="@style/A_CLASS_STYLE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> presenter.selectSeat(4, 3)}"
                            app:column="@{3}"
                            app:row="@{4}" />

                    </TableRow>

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{movieTitle}"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_seat_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_button"
                android:clickable="false"
                android:enabled="false"
                android:onClick="@{() -> presenter.checkReservationSeat()}"
                android:text="@string/confirm"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
