...
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_reserved_movie_date"
            tools:text="라라랜드" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

